--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "author": "r",
     "types": {
         "laravel": "laravel",
-        "laravel2": "laravel"
+        "laravel2": "laravel",
+        "package": "new2"
     }
 }
