--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "require": {
-    "symfony/console": "~2.0"
+    "symfony/console": "~2.0",
+    "symfony/finder": "~2.0",
+    "symfony/filesystem": "~2.0"
   },
   "autoload": {
     "psr-4": {
