--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,13 @@
 {
+  "name": "revati/packager",
+  "description": "Composer package builder bootstrap",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Roberts Gulans",
+      "email": "rgulans@gmail.com"
+    }
+  ],
   "require": {
     "symfony/console": "~2.0",
     "symfony/finder": "~2.0",
