Template, packager init

--- a/stubs/global-config.json
+++ b/stubs/global-config.json
@@ -1,10 +1,5 @@
 {
-  "name": "",
-  "description": "",
-  "authors": [
-    {
-      "name": ""
-    }
-  ],
-  "scripts": []
+  "defaultTemplate": "",
+  "templates": [],
+  "author": []
 }
